--- a/artus-dev/src/assets/base.css
+++ b/artus-dev/src/assets/base.css
@@ -19,6 +19,7 @@ body[theme="purple"] {
 
 body {
     min-height: 100vh;
+    overflow-x: hidden;
     color: #FFFFFF;
     background: var(--color-background);
     line-height: 1.6;
